options関連のファイル名を変更

--- a/view/options.html
+++ b/view/options.html
@@ -119,6 +119,6 @@
       <div class="mb-3"></div>
     </div>
     
-    <script src="../scripts/options.js"></script>
+    <script src="../scripts/save_options.js"></script>
   </body>
 </html>
