+ボタン（仮）追加 +ボタン押下時URLブロックが追加される機能実装（要修正）

--- a/view/options.html
+++ b/view/options.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-          <!-- 行2 -->
+        <!-- 行2 -->
         <div class="row">
           <div class="col-5">
               <div class="mb-3">
@@ -111,6 +111,11 @@
 
 
         </div>
+
+        <button type="button" id="save" class="form-control btn btn-outline-secondary">
+          <!-- <i class="bi bi-plus"></i> -->
+           +
+        </button>
         
         <button type="button" id="save" class="form-control btn btn-outline-primary mt-3">
           Save
@@ -120,5 +125,6 @@
     </div>
     
     <script src="../scripts/save_options.js"></script>
+    <script src="../scripts/add_options.js"></script>
   </body>
 </html>
