--- a/view/options.html
+++ b/view/options.html
@@ -120,5 +120,6 @@
     </div>
     
     <script src="../scripts/save_options.js"></script>
+    <script src="../scripts/content-script.js"></script>
   </body>
 </html>
