--- a/view/options.html
+++ b/view/options.html
@@ -3,21 +3,11 @@
   <head>
     <title>AWS Color Change Extension Options</title>
     <meta charset="utf-8" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="../bootstrap-5.3.0-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
     <style type="text/css">
       .container {
-        max-width: 1200px;
+        min-width: 800px;
       }
     </style>
   </head>
@@ -119,6 +109,7 @@
       <div class="mb-3"></div>
     </div>
     
+    <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
     <script src="../scripts/save_options.js"></script>
     <script src="../scripts/content-script.js"></script>
   </body>
