--- a/view/popup.html
+++ b/view/popup.html
@@ -40,7 +40,7 @@
               <div class="mb-3">
                   <label class="form-label">Color</label>
                   <select id="color-row-1" class="form-select form-select">
-                      <option value="red">red</option>
+                      <option value="crimson">crimson</option>
                       <option value="green">green</option>
                       <option value="blue">blue</option>
                       <option value="yellow">yellow</option>
@@ -49,7 +49,7 @@
             </div>
             <div class="col">
               <div class="mb-3">
-                  <label class="form-label">AWS account ID (or blank)</label>
+                  <label class="form-label">AWS ID (or blank)</label>
                   <input
                     class="form-control"
                     id="aws-id-row-1"
@@ -98,8 +98,6 @@
                   />
             </div>
           </div>
-
-
         </div>
         
         <button type="button" id="save" class="form-control btn btn-outline-primary mt-3">
@@ -110,7 +108,6 @@
     </div>
     
     <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
-    <script src="../scripts/save_options.js"></script>
-    <script src="../scripts/content-script.js"></script>
+    <script src="../scripts/popup.js"></script>
   </body>
 </html>
