--- a/view/popup.html
+++ b/view/popup.html
@@ -4,7 +4,6 @@
     <title>AWS Color Change Extension Options</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../bootstrap-5.3.0-dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="./css/style.css" />
     <style type="text/css">
       .container {
         min-width: 800px;
@@ -40,10 +39,10 @@
               <div class="mb-3">
                   <label class="form-label">Color</label>
                   <select id="color-row-1" class="form-select form-select">
-                      <option value="crimson">crimson</option>
-                      <option value="green">green</option>
-                      <option value="blue">blue</option>
-                      <option value="yellow">yellow</option>
+                      <option value="crimson">Crimson</option>
+                      <option value="green">Green</option>
+                      <option value="blue">Blue</option>
+                      <option value="#CC9900">Yellow</option>
                   </select>
               </div>
             </div>
@@ -82,10 +81,10 @@
           <div class="col">
             <div class="mb-3">
                 <select id="color-row-2" class="form-select form-select">
-                    <option value="red">red</option>
-                    <option value="green">green</option>
-                    <option value="blue">blue</option>
-                    <option value="yellow">yellow</option>
+                    <option value="red">Crimson</option>
+                    <option value="green">Green</option>
+                    <option value="blue">Blue</option>
+                    <option value="#CC9900">Yellow</option>
                 </select>
             </div>
           </div>
