初期ロード時に設定した値が読み込まれるように修正

--- a/view/popup.html
+++ b/view/popup.html
@@ -42,7 +42,7 @@
                       <option value="crimson">Crimson</option>
                       <option value="green">Green</option>
                       <option value="blue">Blue</option>
-                      <option value="#CC9900">Yellow</option>
+                      <option value="#CC9900">Gold</option>
                   </select>
               </div>
             </div>
@@ -65,7 +65,7 @@
                   <input
                   class="form-control"
                   id="url-row-2"
-                  placeholder="https://*.console.aws.amazon.com/*"
+                  placeholder=""
                   />
               </div>
           </div>
@@ -74,7 +74,7 @@
                   <input
                   class="form-control"
                   id="css-selector-row-2"
-                  placeholder=".globalNav-122"
+                  placeholder=""
                   />
               </div>
           </div>
@@ -84,7 +84,7 @@
                     <option value="red">Crimson</option>
                     <option value="green">Green</option>
                     <option value="blue">Blue</option>
-                    <option value="#CC9900">Yellow</option>
+                    <option value="#CC9900">Gold</option>
                 </select>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 <input
                   class="form-control"
                   id="aws-id-row-2"
-                  placeholder="012345678901"
+                  placeholder=""
                   />
             </div>
           </div>
