popupの2行目にラベルが残ってたので削除

--- a/view/popup.html
+++ b/view/popup.html
@@ -74,7 +74,6 @@
           <!-- 行2 -->
           <div class="col-5">
             <div class="mb-3">
-                <label class="form-label">URL</label>
                 <input
                 class="form-control"
                 id="url-row-2"
@@ -84,7 +83,6 @@
           </div>
           <div class="col-2 pe-0">
               <div class="mb-3">
-                  <label class="form-label">CSS Selector</label>
                   <input
                   class="form-control" 
                   id="css-selector-row-2"
@@ -94,7 +92,6 @@
           </div>
           <div class="col ps-0">
             <div class="mb-3">
-                <label class="form-label">Color</label>
                 <select id="color-row-2" class="form-select form-select">
                   <option value="blue">Blue</option>
                   <option value="green">Green</option>
@@ -105,7 +102,6 @@
           </div>
           <div class="col pe-0">
             <div class="mb-3">
-                <label class="form-label">service</label>
                 <select id="service-row-2" class="select-service form-select form-select">
                   <option value="none"></option>
                   <option value="aws">AWS</option>
@@ -115,11 +111,10 @@
           </div>
           <div class="col-2 ps-0">
             <div class="mb-3">
-                <label class="form-label">ID (or blank)</label>
                 <input
                   class="form-control"
                   id="aws-id-row-2"
-                  placeholder="012345678901"
+                  placeholder=""
                   />
             </div>
           </div>
