fixed: aws-id-row --> id-row

--- a/view/popup.html
+++ b/view/popup.html
@@ -65,7 +65,7 @@
                 <label class="form-label">ID (or blank)</label>
                 <input
                   class="form-control"
-                  id="aws-id-row-1"
+                  id="id-row-1"
                   placeholder="012345678901"
                   />
             </div>
@@ -115,7 +115,7 @@
           <div class="mb-3">
               <input
                 class="form-control"
-                id="aws-id-row-2"
+                id="id-row-2"
                 placeholder=""
                 />
           </div>
