--- a/view/popup.html
+++ b/view/popup.html
@@ -130,6 +130,7 @@
         Save
       </button>
     </div>
+    <div class="mb-5"></div>
     
     <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
     <script src="../scripts/popup.js"></script>
