--- a/view/popup.html
+++ b/view/popup.html
@@ -72,7 +72,7 @@
           </div>
       </div>
       
-      <!-- 行2 -->
+      <!-- 行2
       <div class="row">
         <div class="col-5">
           <div class="mb-3">
@@ -120,7 +120,7 @@
                 />
           </div>
         </div>
-      </div>
+      </div> -->
       
       <button type="button" id="plus" class="form-control btn btn-outline-secondary">
         <!-- <i class="bi bi-plus"></i> -->
