--- a/view/popup.html
+++ b/view/popup.html
@@ -70,6 +70,7 @@
                   />
             </div>
           </div>
+          <button class="form-control btn btn-danger" id="delete-row-1"></button>
       </div>
       
       <!-- 行2
@@ -133,6 +134,6 @@
     
     <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
     <script src="../scripts/popup.js"></script>
-    <script src="../scripts/add_options.js"></script>
+    <!-- <script src="../scripts/add_options.js"></script> -->
   </body>
 </html>
