aws複数アカウントの処理がうまくいっていなかったので対応。削除時に色を消すのに対応。

--- a/view/popup.html
+++ b/view/popup.html
@@ -67,7 +67,7 @@
             >
               <option value="none"></option>
               <option value="aws">AWS</option>
-              <option value="azure">Azure</option>
+              <!-- <option value="azure">Azure</option> -->
             </select>
           </div>
         </div>
