カラーピッカーに対応. serviceが選択できないバグあり

--- a/view/popup.html
+++ b/view/popup.html
@@ -52,12 +52,13 @@
         <div class="col ps-0">
           <div class="mb-3">
             <label class="form-label">Color</label>
-            <select id="color-row-1" class="form-select form-select">
+            <input class="form-control form-control-color" type="color" id="color-row-1" value="#eabc6c" />
+            <!-- <select id="color-row-1" class="form-select form-select">
               <option value="blue">Blue</option>
               <option value="green">Green</option>
               <option value="#CC9900">Gold</option>
               <option value="crimson">Crimson</option>
-            </select>
+            </select> -->
           </div>
         </div>
         <div class="col pe-0">
