冗長なコードを削除

--- a/view/popup.html
+++ b/view/popup.html
@@ -53,15 +53,9 @@
           <div class="mb-3">
             <label class="form-label">Color</label>
             <input class="form-control form-control-color" type="color" id="color-row-1" value="#eabc6c" />
-            <!-- <select id="color-row-1" class="form-select form-select">
-              <option value="blue">Blue</option>
-              <option value="green">Green</option>
-              <option value="#CC9900">Gold</option>
-              <option value="crimson">Crimson</option>
-            </select> -->
           </div>
         </div>
-        <div class="col pe-0">
+        <div class="col-2 pe-0">
           <div class="mb-3">
             <label class="form-label">service</label>
             <select
