--- a/view/info.html
+++ b/view/info.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Switch Description</title>
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="../bootstrap-5.3.0-dist/css/bootstrap.css" />
     <style>
       /* Adding soft black shadow around the image */
       .shadowed-img {
@@ -117,7 +114,9 @@
         </div>
         <div class="card-body">
           <p>
-            The <strong>Service and ID</strong> field are configured for AWS and Azure users; AWS users can specify an account ID and Azure users can specify a subscription ID.
+            The <strong>Service and ID</strong> field are configured for AWS and
+            Azure users; AWS users can specify an account ID and Azure users can
+            specify a subscription ID.
           </p>
           <p>
             <strong>ServiceおよびID</strong>
@@ -147,11 +146,9 @@
     </div>
 
     <!-- Footer with Copyright -->
-    <footer class="mt-5">
-      &copy; Chrome Extension by fudy-apo
-    </footer>
+    <footer class="mt-5">&copy; Chrome Extension by fudy-apo</footer>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
