[small fixed] infoの文言修正

--- a/view/info.html
+++ b/view/info.html
@@ -21,11 +21,11 @@
         text-align: center;
         font-size: 14px;
       }
-    </style>
+    </style>　　
   </head>
   <body>
     <div class="container mt-5">
-      <h1 class="mb-4">Color Switch Description</h1>
+      <h1 class="mb-4">Description of Color Switch </h1>
 
       <p class="lead">Color Switchの説明</p>
 
@@ -82,7 +82,7 @@
             には、CSSセレクタを指定します。これによりページの背景の他、特定の部分だけ色を変えることができます。
           </p>
           <div class="alert alert-info" role="alert">
-            <p>Example1 (例): 　<code>body</code>　← changes background</p>
+            <p>Example1 (例): 　<code>body</code>　← changes background color</p>
             <p>
               Example2 (例): 　<code>.mw-header</code>　← changes header of wiki
               pages
