--- a/view/popup.html
+++ b/view/popup.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../bootstrap-5.3.0-dist/css/bootstrap.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
-    />
     <style type="text/css">
       body {
         width: 800px;
@@ -21,11 +17,14 @@
         margin: 0;
       }
       .bi-question-circle-fill {
-        color: rgb(170, 182, 189);
+        color: rgb(109, 109, 109);
         background-color: white;
         border-style: none;
         margin: 0;
-        font-size: 1.5em;
+      }
+      .bi-question-circle-fill:hover {
+        color: rgb(0, 132, 255);
+        transition: 0.3s;
       }
     </style>
   </head>
@@ -33,7 +32,19 @@
     <div class="container">
       <div class="d-flex justify-content-between">
         <h1 class="h3 mt-5 pb-3">Settings</h1>
-        <button id="info-icon" class="btn btn-outline bi bi-question-circle-fill mt-2 mr-0 pr-0 pt-4 "></button>
+        <button id="info-icon" class="bi-question-circle-fill pt-4">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="23"
+            height="23"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"
+            />
+          </svg>
+        </button>
       </div>
 
       <div class="row">
@@ -98,10 +109,19 @@
         <div class="col-1 p-0">
           <div class="mb-3">
             <label class="form-label">　</label>
-            <button
-              class="form-control bi bi-trash-fill"
-              id="delete-row-1"
-            ></button>
+            <button class="form-control bi bi-trash-fill" id="delete-row-1">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
