--- a/view/import_export.html
+++ b/view/import_export.html
@@ -62,9 +62,15 @@
       <!-- メインページ -->
       <div class="col-10 p-0">
         <div class="container">
-          <h1 class="mb-4">Import / Export</h1>
+          <!-- エクスポートボタン -->
+          <button id="export">データをエクスポート</button>
 
+          <!-- インポートボタン -->
+          <input type="file" id="importFile" style="display: none;" />
+          <button id="import">データをインポート</button>
           
+          <!-- ステータスメッセージ -->
+          <p id="status"></p>
       </div>
     </div>
     <!-- Footer with Copyright -->
@@ -72,5 +78,6 @@
 
     <!-- Bootstrap JS -->
     <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
+    <script src="../scripts/import_export.js"></script>
   </body>
 </html>
