--- a/view/import_export.html
+++ b/view/import_export.html
@@ -14,12 +14,13 @@
 
       /* Styling footer */
       footer {
-        bottom: 0;
         width: 100%;
         background-color: #f8f9fa;
         padding: 10px 0;
         text-align: center;
         font-size: 14px;
+        position: absolute;/*←絶対位置*/
+        bottom: 0; /*下に固定*/
       }
 
       /* メニューバー */
@@ -40,6 +41,7 @@
       .nav-link {
         font-size: 1.5em;
       }
+      
     </style>
   </head>
   <body>
@@ -60,20 +62,31 @@
       </div>
 
       <!-- メインページ -->
-      <div class="col-10 p-0">
-        <div class="container">
-          <!-- エクスポートボタン -->
-          <button id="export">データをエクスポート</button>
-
+      <div class="col-8">
+        <h1 class="h3 mt-5 text-center">Export</h1>
+        <div class="d-flex justify-content-center">
+          <div class="row">
+            <!-- エクスポートボタン -->
+            <button type="button" class="btn btn-primary mt-4 mb-3" id="export">Export settings</button>
+          </div>
+        </div>
           <!-- インポートボタン -->
-          <input type="file" id="file-chooser" accept=".json"/>
-          <button class="import" id="change-all">change all</button>
-          <button class="import" id="change-diff">change diff</button>
-          
-          <!-- ステータスメッセージ -->
-          <p id="status"></p>
+        <div>
+          <h1 class="h3 mt-5 pb-3 text-center">Import</h1>
+          <div class="d-flex justify-content-center">
+            <div class="row">
+              <input type="file" class="form-control col-3 mt-3 mb-3" id="file-chooser" accept=".json"/>
+            </div>
+          </div>
+          <div class="d-flex justify-content-center">
+            <div class="row">
+              <button type="button" class="import btn btn-secondary mt-3" id="change-all">replace all</button>
+              <button type="button" class="import btn btn-secondary mt-3" id="change-diff">replace diff</button>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+      <div class="col-2"></div>
     <!-- Footer with Copyright -->
     <footer class="mt-5">&copy; Chrome Extension by fudy-apo</footer>
 
