[small fixed] 微修正

--- a/view/import_export.html
+++ b/view/import_export.html
@@ -104,8 +104,8 @@
             </div>
             <div class="d-flex justify-content-center">
               <div class="row">
-                <button type="button" class="btn btn-secondary mt-3" id="change-all" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="’Replace all’ delete your current data and replaces with your import file data.<br><br>’Replace all’は現在のデータをすべて削除し、インポートするデータに置き換えます。">Replace all</button>
-                <button type="button" class="btn btn-secondary mt-3" id="change-diff" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="'Replace diff' overwrites the difference between the current data and your import file data.<br><br>’Replace diff’ は、現在のデータとインポートするデータの差分のみ書き換えます。">Replace diff</button>
+                <button type="button" class="btn btn-secondary mt-3" id="change-all" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="’Replace all’ delete your current data and replaces with your import file data.<br><br>現在のデータをすべて削除し、インポートするデータに置き換えます。">Replace all</button>
+                <button type="button" class="btn btn-secondary mt-3" id="change-diff" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="'Replace diff' overwrites the difference between the current data and your import file data.<br><br>現在のデータとインポートするデータの差分のみ書き換えます。">Replace diff</button>
                 
               </div>
             </div>
