[document fixed] 説明文を追加

--- a/view/info.html
+++ b/view/info.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Switch Description</title>
+    <title>Color Changer Description</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../bootstrap-5.3.0-dist/css/bootstrap.css" />
     <style>
@@ -62,17 +62,20 @@
       <!-- メインページ -->
       <div class="col-10 p-0">
         <div class="container">
-          <h1 class="mb-4">Description of Color Switch</h1>
+          <h1 class="mb-4">Description of Color Changer</h1>
 
-          <p class="lead">Color Switchの説明</p>
+          <p class="lead">Color Changerの説明</p>
 
           <!-- Insert Image -->
           <div class="text-center mb-4">
-            <img
-              src="../images/info_page1.png"
-              alt="Extension Settings"
-              class="img-fluid shadowed-img"
-            />
+            <a
+              href="https://chromewebstore.google.com/detail/color-changer-websites-co/cbbnibbcjfjfomnmbdkoobcdelfcklka"
+            >
+              <img
+                src="../images/info_page1.png"
+                alt="Extension Settings"
+                class="img-fluid shadowed-img"
+            /></a>
           </div>
 
           <!-- URL Section -->
@@ -115,10 +118,18 @@
                 The <strong>CSS Selector</strong> field specifies a CSS
                 selector. This allows you to change the background of the page
                 as well as the color of certain parts of the page.
+                <a
+                  href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Getting_started"
+                  >What is CSS Selector??</a
+                >
               </p>
               <p>
                 <strong>CSSセレクタ</strong>
                 には、CSSセレクタを指定します。これによりページの背景の他、特定の部分だけ色を変えることができます。
+                <a
+                  href="https://developer.mozilla.org/ja/docs/Learn_web_development/Core/Styling_basics/Getting_started"
+                  >CSSセレクタについて</a
+                >
               </p>
               <div class="alert alert-info" role="alert">
                 <p>
@@ -178,9 +189,34 @@
                 trash can icon (<strong>🗑</strong>).
               </p>
               <p>
+                Please don't forget to hit the save button after you added your
+                settings!
+              </p>
+              <p>
                 プラスアイコン (<strong>+</strong>)
                 をクリックして新しいルールを追加できます。ゴミ箱アイコン
                 (<strong>🗑</strong>) で既存のルールを削除できます。
+              </p>
+              <p>ルールを追加した後は保存ボタンを押して適用します。</p>
+            </div>
+          </div>
+
+          <!-- Import and Export -->
+          <div class="card mb-3">
+            <div class="card-header">
+              <strong>Import and Export</strong>
+            </div>
+            <div class="card-body">
+              <p>
+                You can import and export in Json format. See the
+                <a href="../view/import_export.html">Import/Export</a> section
+                for details.
+              </p>
+              <p>
+                Json形式でインポートやエクスポートができます。詳しくは<a
+                  href="../view/import_export.html"
+                  >Import Export</a
+                >ページを参照ください。
               </p>
             </div>
           </div>
