--- a/view/import_export.html
+++ b/view/import_export.html
@@ -6,7 +6,7 @@
     <title>Color Switch Description</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../bootstrap-5.3.0-dist/css/bootstrap.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <style>
       /* Adding soft black shadow around the image */
       .shadowed-img {
@@ -42,7 +42,7 @@
       .nav-link {
         font-size: 1.5em;
       }
-      .area-import{
+      .area-import-export{
         background-color: rgb(242, 242, 242);
         border-radius: 20px;
         width: fit-content;
@@ -77,21 +77,37 @@
 
       <!-- メインページ -->
       <div class="col-8">
-        <div class="area-import mt-5 mb-5 pt-4" style="width: 450px;">
+        <!-- 説明 -->
+        <div class="card mt-3 mb-3">
+          <div class="card-header">
+            <strong>Import and Export</strong>
+          </div>
+          <div class="card-body">
+            <p>
+              You can import and export settings. Only Json format is supported. <br>Click on the 🛈️ button to see examples and hover over each button to see a description.
+            </p>
+            <p>
+              設定のインポート・エクスポートが可能です。<br>
+              形式はJsonのみ対応しており、🛈️ボタンを押すと例が表示されます。<br>
+              また各ボタンにホバーすることで説明を見れます。
+            <p>
+          </div>
+        </div>
+        <!-- エクスポートボタン -->
+        <div class="area-import-export mt-4 mb-4 pt-3" style="width: 450px;">
           <h1 class="h3 mt-5 text-center">Export</h1>
           <div class="d-flex justify-content-center">
             <div class="row">
-              <!-- エクスポートボタン -->
               <button type="button" class="btn btn-primary mt-4 mb-3" id="export" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Export current settings.<br> 現在の設定をエクスポートします。">Export Json</button>
             </div>
           </div>
         </div>
         <!-- インポートボタン -->
         <div class="row">
-          <div class="area-import pt-5 pb-5 col-1" style="width: 450px;" >
-            <h1 class="h3 pb-3 text-center">Import Json
+          <div class="area-import-export pt-4 pb-5 col-1" style="width: 450px;" >
+            <h1 class="h3 pb-3 text-center">Import
               <button id="info-icon" class="bi-question-circle-fill pt-4" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Show example format.<br> 例を表示する。">
-                <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                <svg width="23" height="23" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
                   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                   <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                 </svg>
@@ -99,7 +115,7 @@
             
             <div class="d-flex justify-content-center">
               <div class="row">
-                <input type="file" class="form-control col-3 mt-3 mb-3" id="file-chooser" accept=".json" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="You can import only json format.<br> Jsonファイルのみインポート可能です。"/>
+                <input type="file" class="form-control col-3 mt-3 mb-3" id="file-chooser" accept=".json" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Only json format supported.<br> Jsonファイルのみインポート可能です。"/>
               </div>
             </div>
             <div class="d-flex justify-content-center">
