[small fixed] infoページにマージンをつけた

--- a/view/info.html
+++ b/view/info.html
@@ -62,7 +62,7 @@
       <!-- メインページ -->
       <div class="col-10 p-0">
         <div class="container">
-          <h1 class="mb-4">Description of Color Changer</h1>
+          <h1 class="mt-4 mb-4">Description of Color Changer</h1>
 
           <p class="lead">Color Changerの説明</p>
 
