[small fixed] 別タブで開かせるように修正

--- a/view/info.html
+++ b/view/info.html
@@ -70,6 +70,7 @@
           <div class="text-center mb-4">
             <a
               href="https://chromewebstore.google.com/detail/color-changer-websites-co/cbbnibbcjfjfomnmbdkoobcdelfcklka"
+              target="_blank"
             >
               <img
                 src="../images/info_page1.png"
@@ -120,6 +121,7 @@
                 as well as the color of certain parts of the page.
                 <a
                   href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Getting_started"
+                  target="_blank"
                   >What is CSS Selector??</a
                 >
               </p>
@@ -128,6 +130,7 @@
                 には、CSSセレクタを指定します。これによりページの背景の他、特定の部分だけ色を変えることができます。
                 <a
                   href="https://developer.mozilla.org/ja/docs/Learn_web_development/Core/Styling_basics/Getting_started"
+                  target="_blank"
                   >CSSセレクタについて</a
                 >
               </p>
