bugfiexed: 削除できない問題を修正、削除した時に空白が増える野を修正

--- a/view/popup.html
+++ b/view/popup.html
@@ -41,7 +41,7 @@
         </button>
       </div>
 
-      <div class="row">
+      <div class="row" id="row-1">
         <div class="col-4">
           <div class="mb-3 url-div">
             <label class="form-label">URL</label>
