--- a/view/import_export.html
+++ b/view/import_export.html
@@ -20,7 +20,7 @@
         padding: 10px 0;
         text-align: center;
         font-size: 14px;
-        position: absolute;/*←絶対位置*/
+        
         bottom: 0; /*下に固定*/
       }
 
@@ -56,6 +56,14 @@
         border: none; 
         outline: none;
       }
+      .main{
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      footer{
+        margin-top: auto;
+      }
     </style>
   </head>
   <body>
@@ -76,43 +84,21 @@
       </div>
 
       <!-- メインページ -->
-      <div class="col-8">
-        <!-- 説明 -->
-        <div class="card mt-3 mb-3">
-          <div class="card-header">
-            <strong>Import and Export</strong>
-          </div>
-          <div class="card-body">
-            <p>
-              You can import and export settings. Only Json format is supported. <br>Click on the 🛈️ button to see examples and hover over each button to see a description.
-            </p>
-            <p>
-              設定のインポート・エクスポートが可能です。<br>
-              形式はJsonのみ対応しており、🛈️ボタンを押すと例が表示されます。<br>
-              また各ボタンにホバーすることで説明を見れます。
-            <p>
-          </div>
-        </div>
+      <div class="col-8 main">
+        <div class="row pt-5 mt-5"></div>
         <!-- エクスポートボタン -->
-        <div class="area-import-export mt-4 mb-4 pt-3" style="width: 450px;">
-          <h1 class="h3 mt-5 text-center">Export</h1>
-          <div class="d-flex justify-content-center">
-            <div class="row">
-              <button type="button" class="btn btn-primary mt-4 mb-3" id="export" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Export current settings.<br> 現在の設定をエクスポートします。">Export Json</button>
+        <div class="row">
+          <div class="area-import-export pb-3 pt-3" style="width: 450px;">
+            <h1 class="h3 pt-5 mt-5 text-center">Export</h1>
+            <div class="d-flex justify-content-center">
+              <div class="row">
+                <button type="button" class="btn btn-primary mt-3 mb-3" id="export" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Export current settings.<br> 現在の設定をエクスポートします。">Export Json</button>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- インポートボタン -->
-        <div class="row">
-          <div class="area-import-export pt-4 pb-5 col-1" style="width: 450px;" >
-            <h1 class="h3 pb-3 text-center">Import
-              <button id="info-icon" class="bi-question-circle-fill pt-4" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Show example format.<br> 例を表示する。">
-                <svg width="23" height="23" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                  <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
-                </svg>
-            </button></h1>
-            
+          <!-- インポートボタン -->
+          <div class="area-import-export pt-5 pb-5 col-1" style="width: 450px;" >
+            <h1 class="h3 pb-3 text-center">Import</h1>
             <div class="d-flex justify-content-center">
               <div class="row">
                 <input type="file" class="form-control col-3 mt-3 mb-3" id="file-chooser" accept=".json" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="Only json format supported.<br> Jsonファイルのみインポート可能です。"/>
@@ -122,19 +108,53 @@
               <div class="row">
                 <button type="button" class="btn btn-secondary mt-3" id="change-all" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="’Replace all’ delete your current data and replaces with your import file data.<br><br>現在のデータをすべて削除し、インポートするデータに置き換えます。">Replace all</button>
                 <button type="button" class="btn btn-secondary mt-3" id="change-diff" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-custom-class="custom-tooltip" data-bs-html="true" data-bs-title="'Replace diff' overwrites the difference between the current data and your import file data.<br><br>現在のデータとインポートするデータの差分のみ書き換えます。">Replace diff</button>
-                
               </div>
             </div>
           </div>
-          
-          <!-- Json sample -->
-          <div class="col" id="show_example" style="display: none;">
+          <!-- 説明 -->
+        <div class="card mt-5 mb-3 p-0">
+          <div class="card-header">
+            <h5>Import and Export</h5>
+          </div>
+          <div class="card-body">
+            <p>
+              You can import and export settings. Only Json format is supported. <br> 
+              hover over each button to see a description. <br>
+            The settings are saved in the order of row1, row2...</p>
+
+            <p>
+              設定のインポート・エクスポートが可能です。各ボタンにホバーすることで説明を見れます。<br>
+              形式はJsonのみ対応しています。row1, row2...の順番に設定が保存されます。
+            </p>
+            <h5>Format</h5>
+            <p>
+              <pre>
+                <code>
+                  {
+                    "row1": {
+                      "url_row_1": "https://www.example.com/",
+                      "css_selector_row_1": ".top-navigation",
+                      "color_row_1": "#746cea",
+                      "service_row_1": "none",
+                      "id_row_1": ""
+                    },
+                    "row2": {
+                      "url_row_2": "https://*.console.aws.amazon.com/",
+                      "css_selector_row_2": ".globalNav-223",
+                      "color_row_2": "#ff0000",
+                      "service_row_2": "aws",
+                      "id_row_2": "012345678912"
+                    }
+                  }
+                </code>
+              </pre>
+            </p>
           </div>
         </div>
       </div>
       <div class="col-2"></div>
     <!-- Footer with Copyright -->
-    <footer class="mt-5">&copy; Chrome Extension by fudy-apo</footer>
+    <footer>&copy; Chrome Extension by fudy-apo</footer>
 
     <!-- Bootstrap JS -->
     <script src="../bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
