[view fixed] popupのlabel部分修正

--- a/view/popup.html
+++ b/view/popup.html
@@ -40,11 +40,17 @@
           </svg>
         </button>
       </div>
-
+      <div>
+        <label class="form-label">URL　　　　　　　　　　　　　　</label>
+        <label class="form-label">CSS Selector　</label>
+        <label class="form-label">Color　　</label>
+        <label class="form-label">Service　　　　</label>
+        <label class="form-label">ID (or blank)</label>
+        <label class="form-label"></label>
+      </div>
       <div class="row">
         <div class="col-4">
           <div class="mb-3 url-div">
-            <label class="form-label">URL</label>
             <input
               type="url"
               class="form-control"
@@ -56,7 +62,6 @@
         </div>
         <div class="col-2 pe-0">
           <div class="mb-3 css-div">
-            <label class="form-label">CSS Selector</label>
             <input
               class="form-control"
               id="css-selector-row-1"
@@ -67,7 +72,6 @@
         </div>
         <div class="col ps-0">
           <div class="mb-3">
-            <label class="form-label">Color</label>
             <input
               class="form-control form-control-color"
               type="color"
@@ -78,7 +82,6 @@
         </div>
         <div class="col-2 pe-0">
           <div class="mb-3">
-            <label class="form-label">Service</label>
             <select
               id="service-row-1"
               class="select-service form-select form-select"
@@ -91,7 +94,6 @@
         </div>
         <div class="col-2 ps-0">
           <div class="mb-3">
-            <label class="form-label">ID (or blank)</label>
             <input
               class="form-control"
               id="id-row-1"
@@ -102,7 +104,6 @@
         </div>
         <div class="col-1 p-0">
           <div class="mb-3">
-            <label class="form-label">　</label>
             <button class="form-control bi bi-trash-fill" id="delete-row-1">
               <svg
                 width="16"
