[ver1.0.0] json import/export機能実装

--- a/view/info.html
+++ b/view/info.html
@@ -120,7 +120,7 @@
                 selector. This allows you to change the background of the page
                 as well as the color of certain parts of the page.
                 <a
-                  href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Getting_started"
+                  href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Basic_selectors"
                   target="_blank"
                   >What is CSS Selector??</a
                 >
@@ -129,7 +129,7 @@
                 <strong>CSSセレクタ</strong>
                 には、CSSセレクタを指定します。これによりページの背景の他、特定の部分だけ色を変えることができます。
                 <a
-                  href="https://developer.mozilla.org/ja/docs/Learn_web_development/Core/Styling_basics/Getting_started"
+                  href="https://developer.mozilla.org/ja/docs/Learn_web_development/Core/Styling_basics/Basic_selectors"
                   target="_blank"
                   >CSSセレクタについて</a
                 >
@@ -192,15 +192,15 @@
                 trash can icon (<strong>🗑</strong>).
               </p>
               <p>
-                Please don't forget to hit the save button after you added your
-                settings!
+                Please don't forget to hit the save button after you added or
+                deleted your settings!
               </p>
               <p>
                 プラスアイコン (<strong>+</strong>)
                 をクリックして新しいルールを追加できます。ゴミ箱アイコン
                 (<strong>🗑</strong>) で既存のルールを削除できます。
               </p>
-              <p>ルールを追加した後は保存ボタンを押して適用します。</p>
+              <p>ルールを追加・削除した後は保存ボタンを押して適用します。</p>
             </div>
           </div>
 
