--- a/view/popup.html
+++ b/view/popup.html
@@ -55,7 +55,7 @@
               type="url"
               class="form-control"
               id="url-row-1"
-              placeholder="https://www.youtube.com/*"
+              placeholder="https://www.example.com/*"
               required
             />
           </div>
